# hyperprose

./: .gitignore  Justfile  README.md  naming-analysis.md  pyproject.toml
design/: 00-architecture.md  00-index.md  02-routing.md  03-templates.md  04-markdown.md  05-dependency-injection.md  06-forms.md  07-streaming.md  08-ssg.md  09-content.md  10-advanced.md  11-api-reference.md  12-hyperlive.md  content.md  dependency-injection.md  forms.md  routing.md  ssg.md  streaming.md  templates.md
docs/: live-state-proposal.md
docs/design/: background-tasks.md  dependency-injection.md  fragments.md  routing.md  templates.md
docs/implementation/: ssg.md  ssr-patterns.md  template-compilation.md  templates-api.md
docs/standards/: documentation.md  error-messages.md
docs/tweets/: hyper-intro-thread.md
editors/hyper.tmbundle/: info.plist
editors/jetbrains-plugin/: IMPLEMENTATION_DRAFT.md  INJECTION_NOTES.md  Justfile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/textmate/: hyper.tmLanguage.json
examples/live-components/: README.md  api-reference.md  chat.py  comparison.md  counter.py  form_validation.py  search.py  technical-sketch.md  todo_list.py
hyper/: __init__.py
hyper/content/: __init__.py  _mixins.py  computed.py  loader.py  markdown.py
hyper/lsp/: __init__.py  __main__.py  server.py  sourcemap.py  test_transformer.py  transformer.py
hyper/templates/: __init__.py  codegen.py  compiler.py  component.py  context.py  errors.py  (+3 more)
rust/: Cargo.toml
rust/transpiler/: Cargo.toml
rust/transpiler/src/: lib.rs  main.rs
(+109 files in other folders)
