[package]
name = "hyper-transpiler"
version = "0.1.0"
edition = "2021"
description = "Hyper template transpiler - converts .hyper files to Python"
license = "MIT"

[lib]
name = "hyper_transpiler"
path = "src/lib.rs"

[[bin]]
name = "hyper"
path = "src/main.rs"

[dependencies]
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"